feat: first draft of currency-conversion API endpoint
Just mocked response for now.
